--- a/settings.json
+++ b/settings.json
@@ -3,10 +3,10 @@
 "autoplaymusic": true,
 "autocomposing": true,
 "autorecording": true,
-"NamaBot":"ZukaChan", 
-"NomorOwner":"6281398860278",
-"Mail":"helgarestapi@gmail.com",
-"NamaOwner":"Helgaa", 
+"NamaBot":"•Mr. Bot Lintang•", 
+"NomorOwner":"6281322577123",
+"Mail":"joceylintang12345@gmail.com",
+"NamaOwner":"Lintang", 
 "lolkey": "beli ke gw",
 "vhtearkey": "beli ke gw",
 "HelKey": "kfL8EfHc"
